Updated tests and added logic of processing quotes, creating trenbars and saving them